--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -250,8 +250,8 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # dh
-bind = SUPER, Tab, cyclenext,           # change focus to another window
-bind = SUPER, Tab, bringactivetotop,    # bring it to the top
+bind = $mainMod, Tab, cyclenext,           # change focus to another window
+bind = $mainMod, Tab, bringactivetotop,    # bring it to the top
 
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod SHIFT, F, fullscreen, 1
@@ -279,10 +279,10 @@ bind = $mainMod, right, movefocus, right
 # bind = $mainMod, right, layoutmsg, cyclenext
 
 
-bind = SUPER SHIFT, H, movewindow, l
-bind = SUPER SHIFT, L, movewindow, r
-bind = SUPER SHIFT, K, movewindow, u
-bind = SUPER SHIFT, J, movewindow, d 
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d 
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -299,7 +299,6 @@ binde = $mainMod SHIFT, Period, resizeactive, 0 -10
 # bind = $mainMod SHIFT, F11, exec, ~/.config/hypr/scripts/gamemode.sh
 # bind = $mainMod CTRL, F12, exec, ~/.config/hypr/scripts/steam.sh
 
-
 # dh: Steam always on Workspace 10
 workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
 # dh: open steam always in workspace 10
@@ -312,10 +311,10 @@ windowrulev2 = workspace 10, title:^(Steam)$
 # submap = reset
 
 # dh screenlock
-bind = SUPER, L, exec, swaylock -f -c 000000
+bind = $mainMod, L, exec, swaylock -f -c 000000
 
 # dh: plugin hyprexpo
-bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+bind = $mainMod, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
 plugin {
    hyprexpo {
@@ -367,63 +366,26 @@ bind = , XF86AudioPrev, exec, playerctl previous
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 # dh workspaces
-workspace = 1, defaultName:main, persistent:true
-workspace = 2, defaultName:web, persistent:true, decorate:false, gapsin:0, gapsout:0
-workspace = 3, defaultName:file, persistent:true
-workspace = 4, defaultName:dev, decorate:false, gapsin:0, gapsout:0
-workspace = 9, defaultName:music, gapsin:200, gapsout:200
-workspace = 10, defaultName:game, decorate:false, gapsin:0, gapsout:0, shadow:false, border:false
+# workspace = 1, defaultName:main, persistent:true
+# workspace = 2, defaultName:web, persistent:true, decorate:false, gapsin:0, gapsout:0
+# workspace = 3, defaultName:file, persistent:true
+# workspace = 4, defaultName:dev, decorate:false, gapsin:0, gapsout:0
+# workspace = 9, defaultName:music, gapsin:200, gapsout:200
+# workspace = 10, defaultName:game, decorate:false, gapsin:0, gapsout:0, shadow:false, border:false
 
-# windowrulev2 = float, class:(Alacritty)
-# windowrulev2 = workspace 4, title:^(
-# windowrulev2 = workspace 3, title:^(.*Thunar.*)$
-windowrulev2 = pin, title:^(.*Thunar.*)$
-
-# steam
+# dh: steam on workspace 10
 windowrulev2 = workspace 10, class:^(steam)$
 windowrulev2 = workspace 10, class:^(.*wlroots.*)$
 
-windowrulev2 = float, class:^(.*Secrets.*)$
-windowrulev2 = size 500 800, class:^(.*Secrets.*)$
-
-windowrulev2 = float, class:^(.*pavucontrol.*)$
-windowrule = float,^(blueman-manager)$
-windowrule = float,^(nm-connection-editor)$
-
-
-# Browser Picture in Picture
-windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = pin, title:^(Picture-in-Picture)$
-windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
-
-# dh mpv
-# windowrulev2 = float, title:^(.*mpv.*)$
-# windowrulev2 = size 640 480, title:^(.*mpv.*)$
-# windowrulev2 = pin, title:^(.mpv.*)$
-
-# dh Wallpaper with hyprpaper
-# $w1 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall.jpeg"
-# $w2 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-blackgirl1.jpeg"
-# $w3 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-blackgirl2.jpeg"
-# $w4 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-green1.jpeg"
-# $w5 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-green2.jpeg"
-# $w6 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-ga.jpeg"
-# $w7 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-phg1.jpeg"
-# $w8 = hyprctl hyprpaper wallpaper "DP-1,~/Wallpaper/wall-phg2.jpeg"
-
-# dh additional binding to the above binding $mainMod, 1-8
-# bind = $mainMod, 1, exec, $w1
-# bind = $mainMod, 2, exec, $w2
-# bind = $mainMod, 3, exec, $w3
-# bind = $mainMod, 4, exec, $w4
-# bind = $mainMod, 5, exec, $w5
-# bind = $mainMod, 6, exec, $w6
-# bind = $mainMod, 7, exec, $w7
-# bind = $mainMod, 8, exec, $w8
+# dh: floating windows floats
+# windowrulev2 = float, class:^(.*Secrets.*)$
+# windowrulev2 = size 500 800, class:^(.*Secrets.*)$
+# windowrulev2 = float, class:^(.*pavucontrol.*)$
+# windowrule = float,^(blueman-manager)$
+# windowrule = float,^(nm-connection-editor)$
 
 # dh: quake mode
-# bind = CTRL, grave, exec, ~/.config/hypr/scripts/alacritty_quake.sh 
-bind = CTRL, grave, exec, alacritty --class Alacritty,dropdown -T alacritty-dropdown
+bind = CTRL, grave, exec, $terminal --class Alacritty,dropdown -T alacritty-dropdown
 windowrulev2 = float, title:^(alacritty-dropdown)$
 # take 1/3 of the screen
 windowrulev2 = size 100% 33%, title:^(alacritty-dropdown)$
@@ -432,7 +394,7 @@ windowrulev2 = move 0 32, title:^(alacritty-dropdown)$
 
 # dh: resize window (from hyprland.org)
 # will switch to a submap called resize
-bind = SUPER SHIFT, R, submap, resize
+bind = $mainMod SHIFT, R, submap, resize
 # will start a submap called "resize"
 submap = resize
 # sets repeatable binds for resizing the active window
