--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,8 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = alacritty
 $fileManager = thunar
-$menu = wofi --show drun
+# $menu = wofi --show drun
+$menu = ~/.config/hypr/scripts/HyprLauncher.sh
 
 #################
 ### AUTOSTART ###
@@ -380,7 +381,7 @@ windowrulev2 = workspace 10, class:^(.*wlroots.*)$
 # dh: floating windows floats
 # windowrulev2 = float, class:^(.*Secrets.*)$
 # windowrulev2 = size 500 800, class:^(.*Secrets.*)$
-# windowrulev2 = float, class:^(.*pavucontrol.*)$
+windowrulev2 = size 300 500, class:^(.*HyprLauncher.*)$
 # windowrule = float,^(blueman-manager)$
 # windowrule = float,^(nm-connection-editor)$
 
