--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -381,7 +381,7 @@ windowrulev2 = workspace 10, class:^(.*wlroots.*)$
 # dh: floating windows floats
 # windowrulev2 = float, class:^(.*Secrets.*)$
 # windowrulev2 = size 500 800, class:^(.*Secrets.*)$
-windowrulev2 = size 300 500, class:^(.*HyprLauncher.*)$
+windowrulev2 = float, class:^(.*HyprLauncher.*)$
 # windowrule = float,^(blueman-manager)$
 # windowrule = float,^(nm-connection-editor)$
 
