--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,8 +15,8 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = alacritty
 $fileManager = thunar
-# $menu = wofi --show drun
-$menu = ~/.config/hypr/scripts/HyprLauncher.sh
+$menu = fuzzel # wofi --show drun
+# $menu = ~/.config/hypr/scripts/HyprLauncher.sh
 
 #################
 ### AUTOSTART ###
@@ -40,9 +40,6 @@ exec-once = mako --config ~/.config/mako/config
 
 # dh use hyprpaper as wallpaper app
 exec-once = hyprpaper -c ~/.config/hypr/hyprpaper.conf
-
-# hyprpm: reload // hyprexpo:expo plugin
-exec-once = hyprpm reload -n
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -143,7 +140,7 @@ dwindle {
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = inherit # master # slave, inherit
-    orientation = left
+    orientation = right # left
     # mfact = 0.7
     # no_gaps_when_only = 0
 }
@@ -301,7 +298,7 @@ binde = $mainMod SHIFT, Period, resizeactive, 0 -10
 # bind = $mainMod CTRL, F12, exec, ~/.config/hypr/scripts/steam.sh
 
 # dh: Steam always on Workspace 10
-workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
+# workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
 # dh: open steam always in workspace 10
 windowrulev2 = workspace 10, title:^(Steam)$
 
@@ -315,7 +312,7 @@ windowrulev2 = workspace 10, title:^(Steam)$
 bind = $mainMod, L, exec, swaylock -f -c 000000
 
 # dh: plugin hyprexpo
-bind = $mainMod, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+# bind = $mainMod, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
 plugin {
    hyprexpo {
@@ -336,11 +333,19 @@ plugin {
 }
 
 # dh screenshot with grim and slurp
-bind = SHIFT, Print, exec, grim -g "$(slurp -d)" - | wl-copy
-bind = , Print, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
+bind = SHIFT, F12, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = , F12, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
+
+# take video with wf-recorder and slurp
+bind = SHIFT, F11, exec, wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4')
+# bind = SHIFT, F11, exec, wf-recorder -g "$(slurp)" -f output.mp4
+bind = , F11, exec, pkill wf-recorder
 
 # dh headphones
-bind = $mainMod, F1, exec, ~/.config/hypr/scripts/ap.sh
+bind = $mainMod, F1, exec, ~/.config/hypr/scripts/ap.sh			# airpods connect
+bind = $mainMod, F2, exec, ~/.config/hypr/scripts/ap-disable.sh		# airpods disconnect
+bind = $mainMod, F3, exec, ~/.config/hypr/scripts/hypr_connect.sh	# hypr gamepad connect
+bind = $mainMod, F4, exec, ~/.config/hypr/scripts/hypr_disconnect.sh 	# hypr gamepad disconnect
 
 # dh backlight
 # bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
