--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,12 +1,12 @@
 # preload wallpapers
-$file1 = ~/Wallpaper/wall.jpeg
+$file1 = ~/Wallpaper/wp5.png
 preload = $file1
 
 # preload more wallpapers here...
 # preload = ...
 
 # set wallpaper for main display
-wallpaper = DP-1,~/Wallpaper/wall.jpeg
+wallpaper = DP-1,$file1 # ~/Wallpaper/wall.jpeg
 
 # other settings
 splash = off
