--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -39,7 +39,7 @@ exec-once = waybar -c ~/.config/waybar/config
 exec-once = mako --config ~/.config/mako/config
 
 # dh use hyprpaper as wallpaper app
-exec-once = hyprpaper -c ~/.config/hypr/hyprpaper.conf
+exec-once = hyprpaper 
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -292,6 +292,9 @@ binde = $mainMod, Period, resizeactive, 10 0
 binde = $mainMod SHIFT, Comma, resizeactive, 0 10
 binde = $mainMod SHIFT, Period, resizeactive, 0 -10
 
+# dh change wallpaper
+binde = $mainMod SHIFT, F5, exec, ~/.config/hypr/scripts/random_wallpaper.sh
+
 # dh GameMode From hyprland.org Wiki
 # not really needed since the workspace rule 
 # bind = $mainMod SHIFT, F11, exec, ~/.config/hypr/scripts/gamemode.sh
@@ -310,6 +313,7 @@ windowrulev2 = workspace 10, title:^(Steam)$
 
 # dh screenlock
 bind = $mainMod, L, exec, swaylock -f -c 000000
+
 
 # dh: plugin hyprexpo
 # bind = $mainMod, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
@@ -333,11 +337,11 @@ plugin {
 }
 
 # dh screenshot with grim and slurp
-bind = SHIFT, F12, exec, grim -g "$(slurp -d)" - | wl-copy
-bind = , F12, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
+bind = CTRL, PRINT, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = , PRINT, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
 
 # take video with wf-recorder and slurp
-bind = SHIFT, F11, exec, wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4')
+bind = SHIFT, PRINT, exec, wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4')
 # bind = SHIFT, F11, exec, wf-recorder -g "$(slurp)" -f output.mp4
 bind = , F11, exec, pkill wf-recorder
 
@@ -379,6 +383,17 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # workspace = 9, defaultName:music, gapsin:200, gapsout:200
 # workspace = 10, defaultName:game, decorate:false, gapsin:0, gapsout:0, shadow:false, border:false
 
+# Wallpaper
+# $script_and_switch = hyprctl dispatch workspace $1 && ~/.config/hypr/scripts/random_wallpaper.sh
+# bind = SUPER, 1, exec, $script_and_switch 1
+# bind = SUPER, 2, exec, $script_and_switch 2
+# bind = SUPER, 3, exec, $script_and_switch 3
+# bind = SUPER, 4, exec, $script_and_switch 4
+# bind = SUPER, 5, exec, $script_and_switch 5
+# bind = SUPER, 6, exec, $script_and_switch 6
+# bind = SUPER, 7, exec, $script_and_switch 7
+# bind = SUPER, 8, exec, $script_and_switch 8
+
 # dh: steam on workspace 10
 windowrulev2 = workspace 10, class:^(steam)$
 windowrulev2 = workspace 10, class:^(.*wlroots.*)$
@@ -386,7 +401,7 @@ windowrulev2 = workspace 10, class:^(.*wlroots.*)$
 # dh: floating windows floats
 # windowrulev2 = float, class:^(.*Secrets.*)$
 # windowrulev2 = size 500 800, class:^(.*Secrets.*)$
-windowrulev2 = float, class:^(.*HyprLauncher.*)$
+# windowrulev2 = float, class:^(.*HyprLauncher.*)$
 # windowrule = float,^(blueman-manager)$
 # windowrule = float,^(nm-connection-editor)$
 
