--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,6 +41,9 @@ exec-once = mako --config ~/.config/mako/config
 # dh use hyprpaper as wallpaper app
 exec-once = hyprpaper 
 
+# dh use hyprsunset
+exec-once = hyprsunset
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -356,6 +359,10 @@ bind = $mainMod, F4, exec, ~/.config/hypr/scripts/hypr_disconnect.sh 	# hypr gam
 # bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 # binde = KEY_FN, xxx, exec, brightnessctl s +5%
 # binde = KEY_FN, Minus, exec, brightnessctl s 5%-
+
+# hyprsunset
+bind = $mainMod, F11, exec, hyprctl hyprsunset temperature +500
+bind = $mainMod, F12, exec, hyprctl hyprsunset temperature -500
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 
