--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -344,9 +344,13 @@ bind = CTRL, PRINT, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = , PRINT, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
 
 # take video with wf-recorder and slurp
-bind = SHIFT, PRINT, exec, wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4')
-# bind = SHIFT, F11, exec, wf-recorder -g "$(slurp)" -f output.mp4
-bind = , F11, exec, pkill wf-recorder
+# bind = SHIFT, PRINT, exec, wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4')
+# bind = , F11, exec, pkill wf-recorder
+# press/press again
+# bindr = SHIFT, PRINT, exec, pkill wf-recorder && notify-send "Recording stopped" || wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4') && notify-send "Recording started!"
+# press/press long
+bind = SHIFT, Print, exec, pkill wf-recorder && notify-send 'Recording stopped.'
+bindo = SHIFT, Print, exec, notify-send 'Recording started...' && wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4')
 
 # dh headphones
 bind = $mainMod, F1, exec, ~/.config/hypr/scripts/ap.sh			# airpods connect
@@ -360,7 +364,7 @@ bind = $mainMod, F4, exec, ~/.config/hypr/scripts/hypr_disconnect.sh 	# hypr gam
 # binde = KEY_FN, xxx, exec, brightnessctl s +5%
 # binde = KEY_FN, Minus, exec, brightnessctl s 5%-
 
-# hyprsunset
+# hyprsiunset
 bind = $mainMod, F11, exec, hyprctl hyprsunset temperature +500
 bind = $mainMod, F12, exec, hyprctl hyprsunset temperature -500
 
