--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,6 @@ monitor=,preferred,auto,auto
 $terminal = alacritty
 $fileManager = thunar
 $menu = fuzzel # wofi --show drun
-# $menu = ~/.config/hypr/scripts/HyprLauncher.sh
 
 #################
 ### AUTOSTART ###
@@ -25,9 +24,9 @@ $menu = fuzzel # wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal & $fileManager
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+# dh: for plugins with hyprpm
+# exec-once = hyprpm reload
+# exec-once = hyprpm enable hyprexpo
 
 # dh: thunar as daemon
 exec-once = $fileManager --daemon
@@ -138,6 +137,7 @@ dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
     force_split = 0 # dont follow mouse
+    smart_resizing = true # 
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -146,6 +146,10 @@ master {
     orientation = right # left
     # mfact = 0.7
     # no_gaps_when_only = 0
+    allow_small_split = true
+    new_status = inherit
+    new_on_top = true
+    new_on_active = after # before, after, new_on_top
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -189,7 +193,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    # workspace_swipe = false
 }
 
 ####################
@@ -276,9 +280,12 @@ bind = $mainMod SHIFT, right, movetoworkspace, e+1
 # dh move focus 
 bind = $mainMod, left, movefocus, left
 bind = $mainMod, right, movefocus, right
-# bind = $mainMod, left, layoutmsg, cycleprev
-# bind = $mainMod, right, layoutmsg, cyclenext
 
+# dh master layout
+# bind = $mainMod CTRL, left, layoutmsg, cycleprev
+# bind = $mainMod CTRL, right, layoutmsg, cyclenext
+# bind = $mainMod SHIFT, left, layoutmsg, rollnext
+# bind = $mainMod SHIFT, right, layoutmsg, rollprev
 
 bind = $mainMod SHIFT, H, movewindow, l
 bind = $mainMod SHIFT, L, movewindow, r
@@ -298,11 +305,6 @@ binde = $mainMod SHIFT, Period, resizeactive, 0 -10
 # dh change wallpaper
 binde = $mainMod SHIFT, F5, exec, ~/.config/hypr/scripts/random_wallpaper.sh
 
-# dh GameMode From hyprland.org Wiki
-# not really needed since the workspace rule 
-# bind = $mainMod SHIFT, F11, exec, ~/.config/hypr/scripts/gamemode.sh
-# bind = $mainMod CTRL, F12, exec, ~/.config/hypr/scripts/steam.sh
-
 # dh: Steam always on Workspace 10
 # workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
 # dh: open steam always in workspace 10
@@ -316,28 +318,6 @@ windowrulev2 = workspace 10, title:^(Steam)$
 
 # dh screenlock
 bind = $mainMod, L, exec, swaylock -f -c 000000
-
-
-# dh: plugin hyprexpo
-# bind = $mainMod, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
-
-plugin {
-   hyprexpo {
-       columns = 3
-       gap_size = 5
-       bg_col = rgb(111111)
-       workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-   }
-   
-   # hyprwinwrap {
-   #    # class is an EXACT match and NOT a regex!
-   #    class = kitty-bg
-   # }
-
-   #hyprtrails {
-   #    color = rgba(ffaa00ff)
-   #}
-}
 
 # dh screenshot with grim and slurp
 bind = CTRL, PRINT, exec, grim -g "$(slurp -d)" - | wl-copy
