Comment out qtutils check in hyprland configuration
Comment out the disable_hyprland_qtutils_check setting.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -158,7 +158,7 @@ misc {
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
     font_family = "Source Code Pro"
     # font_size = 14
-    disable_hyprland_qtutils_check = true
+    # disable_hyprland_qtutils_check = true
 }
 
 # https://wiki.hyprland.org/Configuring/Tearing/
