--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,26 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# auto:
+# monitor=,preferred,auto,auto
+
+# dh: my two monitor setup
+# remove all lines and use above line for auto handling by hyprland
+$mainMon = DP-1
+$secondMon = HDMI-A-1
+monitor=$mainMon,3840x2160@144,0x0,1.50
+monitor=$secondMon,2560x1440@144,2560x0,1.00
+workspace = 1, monitor:$mainMon, persistent:true
+workspace = 2, monitor:$mainMon, persistent:true
+workspace = 3, monitor:$mainMon, persistent:true
+workspace = 4, monitor:$mainMon, persistent:true
+workspace = 5, monitor:$mainMon, persistent:true
+workspace = 6, monitor:$secondMon, persistent:true
+workspace = 7, monitor:$secondMon, persistent:true
+workspace = 8, monitor:$secondMon, persistent:true
+workspace = 9, monitor:$secondMon, persistent:true
+workspace = 10, monitor:$secondMon, persistent:true
+
 
 ###################
 ### MY PROGRAMS ###
@@ -158,7 +177,6 @@ misc {
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
     font_family = "Source Code Pro"
     # font_size = 14
-    # disable_hyprland_qtutils_check = true
 }
 
 # https://wiki.hyprland.org/Configuring/Tearing/
@@ -179,7 +197,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1 
+    # follow_mouse = 1 
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -308,13 +326,19 @@ binde = $mainMod SHIFT, F5, exec, ~/.config/hypr/scripts/random_wallpaper.sh
 # dh: Steam always on Workspace 10
 # workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
 # dh: open steam always in workspace 10
-windowrulev2 = workspace 10, title:^(Steam)$
+# windowrulev2 = workspace 10, title:^(Steam)$
 
 # dh unbind/bind all with (Mod)+Shift+F12
 # bind = $mainMod SHIFT, F12, submap, clean
 # submap = clean
 # bind = $mainMod SHIFT CTRL, F12, submap, reset
 # submap = reset
+
+# Workspace rules (hyprctl clients | grep %appname%)
+# Float these windows
+windowrulev2 = float, class:^(org.gnome.World.Secrets)$
+windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float, class:^(blueman-manager)$
 
 # dh screenlock
 bind = $mainMod, L, exec, swaylock -f -c 000000
@@ -332,21 +356,25 @@ bind = , PRINT, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim
 bind = SHIFT, Print, exec, pkill wf-recorder && notify-send 'Recording stopped.'
 bindo = SHIFT, Print, exec, notify-send 'Recording started...' && wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4')
 
-# dh headphones
-bind = $mainMod, F1, exec, ~/.config/hypr/scripts/ap.sh			# airpods connect
-bind = $mainMod, F2, exec, ~/.config/hypr/scripts/ap-disable.sh		# airpods disconnect
-bind = $mainMod, F3, exec, ~/.config/hypr/scripts/hypr_connect.sh	# hypr gamepad connect
-bind = $mainMod, F4, exec, ~/.config/hypr/scripts/hypr_disconnect.sh 	# hypr gamepad disconnect
+# dh external bluetooth speakers/headphones
+bind = $mainMod, F1, exec, ~/.config/hypr/scripts/airpods-toggle.sh
+bind = $mainMod, F2, exec, ~/.config/hypr/scripts/bose-qc-ultra-2-toggle.sh
+bind = $mainMod, F3, exec, ~/.config/hypr/scripts/bose-soundlink-max-toggle.sh
+bind = $mainMod, F6, exec, ~/scripts/dlclip.sh
 
-# dh backlight
-# bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
-# bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
-# binde = KEY_FN, xxx, exec, brightnessctl s +5%
-# binde = KEY_FN, Minus, exec, brightnessctl s 5%-
+# enable/disable left/right monitor
+bind = $mainMod SHIFT, F1, exec, ~/.config/hypr/scripts/toggle-monitor-dpms-DP.sh
+bind = $mainMod SHIFT, F2, exec, ~/.config/hypr/scripts/toggle-monitor-dpms-HDMI.sh
 
-# hyprsiunset
-bind = $mainMod, F11, exec, hyprctl hyprsunset temperature +500
-bind = $mainMod, F12, exec, hyprctl hyprsunset temperature -500
+# dh: backlight
+# binde = , XF86MonBrightnessUp, exec, brightnessctl s +5%
+# binde = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+binde = $mainMod, F9, exec, brightnessctl s +5%
+binde = $mainMod, F10, exec, brightnessctl s 5%-
+
+# dh: hyprsunset
+binde = $mainMod, F11, exec, hyprctl hyprsunset temperature +500
+binde = $mainMod, F12, exec, hyprctl hyprsunset temperature -500
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 
@@ -386,15 +414,14 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # bind = SUPER, 8, exec, $script_and_switch 8
 
 # dh: steam on workspace 10
-windowrulev2 = workspace 10, class:^(steam)$
-windowrulev2 = workspace 10, class:^(.*wlroots.*)$
+# windowrulev2 = workspace 10, class:^(steam)$
+# windowrulev2 = workspace 10, class:^(.*wlroots.*)$
 
-# dh: floating windows floats
-# windowrulev2 = float, class:^(.*Secrets.*)$
-# windowrulev2 = size 500 800, class:^(.*Secrets.*)$
-# windowrulev2 = float, class:^(.*HyprLauncher.*)$
-# windowrule = float,^(blueman-manager)$
-# windowrule = float,^(nm-connection-editor)$
+# dh: mpv always float
+windowrulev2 = float, class:^(mpv)$
+
+# dh: steam never float
+windowrulev2 = tile, class:^(steam)$
 
 # dh: quake mode
 bind = CTRL, grave, exec, $terminal --class Alacritty,dropdown -T alacritty-dropdown
