--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -348,15 +348,9 @@ bind = CTRL, PRINT, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = , PRINT, exec, grim $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s_grim.png')
 
 # take video with wf-recorder and slurp
-# bind = SHIFT, PRINT, exec, wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4')
-# bind = , F11, exec, pkill wf-recorder
-# press/press again
-# bindr = SHIFT, PRINT, exec, pkill wf-recorder && notify-send "Recording stopped" || wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4') && notify-send "Recording started!"
-# press/press long
-bind = SHIFT, Print, exec, pkill wf-recorder && notify-send 'Recording stopped.'
-bindo = SHIFT, Print, exec, notify-send 'Recording started...' && wf-recorder -g "$(slurp)" -f $(xdg-user-dir)/Videos/$(date +'%s_recording.mp4')
+bind = SHIFT, Print, exec, ~/.config/hypr/scripts/record.sh
 
-# dh external bluetooth speakers/headphones
+# Bluetooth devices
 bind = $mainMod, F1, exec, ~/.config/hypr/scripts/airpods-toggle.sh
 bind = $mainMod, F2, exec, ~/.config/hypr/scripts/bose-qc-ultra-2-toggle.sh
 bind = $mainMod, F3, exec, ~/.config/hypr/scripts/bose-soundlink-max-toggle.sh
