New windowrules implemented

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -183,7 +183,6 @@ misc {
 # general {
 #     allow_tearing = true
 # }
-# windowrulev2 = immediate, class:^(xxx)$
 
 #############
 ### INPUT ###
@@ -323,22 +322,13 @@ binde = $mainMod SHIFT, Period, resizeactive, 0 -10
 # dh change wallpaper
 binde = $mainMod SHIFT, F5, exec, ~/.config/hypr/scripts/random_wallpaper.sh
 
-# dh: Steam always on Workspace 10
-# workspace = 10, decorate:false, rounding:false, gapsin:0, gapsout:0, border:false, shadow:false
-# dh: open steam always in workspace 10
-# windowrulev2 = workspace 10, title:^(Steam)$
-
-# dh unbind/bind all with (Mod)+Shift+F12
-# bind = $mainMod SHIFT, F12, submap, clean
-# submap = clean
-# bind = $mainMod SHIFT CTRL, F12, submap, reset
-# submap = reset
-
 # Workspace rules (hyprctl clients | grep %appname%)
 # Float these windows
-windowrulev2 = float, class:^(org.gnome.World.Secrets)$
-windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float, class:^(blueman-manager)$
+# Syntax: windowrule = match:class my-window, border_size 10
+windowrule = match:class ^(org.gnome.World.Secrets)$, float on
+windowrule = match:class ^(org.pulseaudio.pavucontrol)$, float on
+windowrule = match:class ^(blueman-manager)$, float on
+windowrule = match:class ^(mpv)$, float on
 
 # dh screenlock
 bind = $mainMod, L, exec, swaylock -f -c 000000
@@ -407,23 +397,13 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # bind = SUPER, 7, exec, $script_and_switch 7
 # bind = SUPER, 8, exec, $script_and_switch 8
 
-# dh: steam on workspace 10
-# windowrulev2 = workspace 10, class:^(steam)$
-# windowrulev2 = workspace 10, class:^(.*wlroots.*)$
-
-# dh: mpv always float
-windowrulev2 = float, class:^(mpv)$
-
-# dh: steam never float
-windowrulev2 = tile, class:^(steam)$
-
-# dh: quake mode
-bind = CTRL, grave, exec, $terminal --class Alacritty,dropdown -T alacritty-dropdown
-windowrulev2 = float, title:^(alacritty-dropdown)$
-# take 1/3 of the screen
-windowrulev2 = size 100% 33%, title:^(alacritty-dropdown)$
-# top of screen minus waybar size
-windowrulev2 = move 0 32, title:^(alacritty-dropdown)$
+# # dh: quake mode
+# # bind = CTRL, grave, exec, $terminal --class Alacritty,dropdown -T alacritty-dropdown
+# windowrulev2 = float, title:^(alacritty-dropdown)$
+# # take 1/3 of the screen
+# windowrulev2 = size 100% 33%, title:^(alacritty-dropdown)$
+# # top of screen minus waybar size
+# windowrulev2 = move 0 32, title:^(alacritty-dropdown)$
 
 # dh: resize window (from hyprland.org)
 # will switch to a submap called resize
